# verizon-drift-monitoring-poc

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  bootstrap_database.py  create_dashboard_json.py  create_database_tables.py  deploy_dashboard.sh  drift_dashboard.yml  environment-dataproc.yml  environment-docker-dev.yml  environment.yml  main.py  metrics_transformation.ipynb  nlp_drift_detection.ipynb  pyproject.toml  requirements.txt  scratch.ipynb  spark-job.properties  spark-job.properties.j2  spark-job.properties.jinja  spark_debug.ipynb  spark_job.properties  spark_test.py  spark_transform.py  spark_transformation.py  time_series_data_generation.ipynb
dags/: execute_spark_transformation.py
dashboards/: drift_dashboard_1.yml  drift_dashboard_2.yml  drift_dashboard_3.yml
db_export/: acc_table.csv  auprc_table.csv  auroc_table.csv  confusion_table.csv  f1_table.csv  lift_diff_table.csv  lift_table.csv  neg_score_table.csv  pos_score_table.csv  prc_prec_diff_table.csv  prc_prec_table.csv  prc_rec_table.csv  prec_table.csv  psi_table.csv  rec_table.csv  roc_fp_diff_table.csv  roc_fp_table.csv  roc_tp_diff_table.csv
environments/: dataproc.yml  dev.yml
gcp_resource/: dataproc.json
grafana/: demo_dashboard.json  drift_dashboard.json
metrics/: __init__.py  accuracy_metric.py  base_metric.py  metric_registry.py  psi_metric.py
spark_conf/dataproc/: spark-defaults.conf  spark-defaults.conf.j2
spark_conf/standalone/: spark-defaults.conf
sql/: drift_dashboard_ddl.sql  kill_all_conns.sql  par_chart_rec.sql  prc_chart_prec.sql  roc_chart_fpr.sql  roc_chart_tpr.sql
src/: __init__.py
src/dataloader/: __init__.py  base_dataloader.py  bigquery_dataloader.py  jdbc_dataloader.py
src/metrics/: __init__.py  accuracy_metric.py  base_metric.py  lift_metric.py  metric_registry.py  psi_metric.py
src/udfs/: __init__.py  decile.py  threshold.py
taskfiles/: DockerTasks.yml
