[tool.poetry]
name = "verizon-drift-monitoring-poc"
version = "0.1.0"
description = "Verzion Drift Monitoring POC"
authors = [
    "Chuhan Feng <chuhan.feng@verizon.com>",
    "Shailesh Pilare <shailesh.pilare@verzion.com"
]
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
numpy = "^1.25.0"
torch = [
    { platform = "darwin", version = "^2.0.1", source = "pypi" },
    { platform = "linux", version = "^2.0.1", source = "pytorch" },
]
torchmetrics = "^0.11.4"
sqlalchemy = "^2.0.17"
pyspark = "^3.4.1"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
requests = "^2.31.0"
psycopg = { version = "^3.1.9", extras = ["binary", "pool"] }
sqlalchemy-utils = "^0.41.1"
pyarrow = "^12.0.1"


### Development utilities ###
[tool.poetry.group.dev-utils]
optional = true

[tool.poetry.group.dev-utils.dependencies]
jinja2-cli = {extras = ["yaml"], version = "^0.8.2"}


[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
